# rustancean-radar

./: README.md
backend/: .env.dist  Cargo.toml  docker-compose.yml
backend/migrations/2020-01-16-011829_create_devs/: down.sql  up.sql
backend/src/: application.rs  domain.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
backend/src/controllers/: dev.rs  mod.rs  search.rs
database/: docker-compose.yml
database/migrations/: V1__Initial-version.sql
web/: Cargo.toml
web/src/: lib.rs  main.rs
web/src/components/: app.rs  dev_form.rs  dev_item.rs  mod.rs
web/static/: index.html
web/static/assets/css/: Sidebar.css
