[package]
name = "backend"
version = "0.1.0"
authors = ["leocavalcante <lc@leocavalcante.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"